# kanske

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  output.txt  test.txt  test2.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
contrib/: kanske.service
examples/: error_messages.rs
kanske/: Cargo.toml  default_config
kanske-app/: Cargo.toml
kanske-app/src/: main.rs
kanske-ctl/: Cargo.toml
kanske-lib/: Cargo.toml
kanske-lib/src/: applier.rs  composer.rs  error.rs  lib.rs  matcher.rs  parser.rs  parser_new.rs  paths.rs  wayland_interface.rs
kanske-lib/src/parser/: ast.rs  block_parser.rs  config_parser.rs  file_parser.rs  lexer.rs  output_parser.rs  output_parser.rs.backup  parse.rs  profile_parser.rs  token.rs
kanske-lib/src/parser/block_parser/: from_str_impls.rs  types.rs
kanske-lib/src/parser/output_parser/: from_str_impls.rs  types.rs
kanske-lib/tests/: README.md  TEST_SUMMARY.md  include_tests.rs  parser_tests.rs  unit_tests.rs
kanske/src/: exec.rs  main.rs  state.rs
kanskectl/: Cargo.toml
kanskectl/src/: main.rs
scripts/: README.md  connect-sway.fish  debug-sway.fish  interactive-test.fish  run-kanshi.fish  setup-displays.fish  simulate-hotplug.fish  start-sway.fish  stop-sway.fish  test-kanske.fish  test-shell.fish  test-suite.fish  tmux-test.fish
