[workspace]
members = [
  "kanske-lib",
  "kanske-ctl",
  "kanske-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Patrik Höjner <patrik@hojner.se>"]
license = "MIT"

[workspace.dependencies]
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
