[workspace]
members = [
  "kanske-lib",
  "kanskectl",
  "kanske",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Patrik Höjner <patrik@hojner.se>"]
license = "MIT"

[workspace.dependencies]
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }
nix = { version = "0.29", features = ["user"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
