[package]
name = "kanske-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
tracing.workspace = true
nix.workspace = true
glob = "0.3"


[dev-dependencies]
tempfile = "3"

[lib]
name = "kanske_lib"
path = "src/lib.rs"
