[package]
name = "kanske-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core library for kanske — Wayland output management, config parsing, profile matching"
keywords = ["wayland", "display", "monitor", "wlr-output-management"]
categories = ["parser-implementations"]

[dependencies]
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
tracing.workspace = true
nix.workspace = true
glob = "0.3"


[dev-dependencies]
tempfile = "3"

[lib]
name = "kanske_lib"
path = "src/lib.rs"
