[package]
name = "kanske"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kanske-lib = { path = "../kanske-lib" }
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
calloop.workspace = true
calloop-wayland-source.workspace = true

[[bin]]
name = "kanske"
path = "src/main.rs"
