[package]
name = "kanske"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Wayland display configuration daemon — automatically applies output profiles on hotplug"
keywords = ["wayland", "display", "monitor", "hotplug", "compositor"]
categories = ["command-line-utilities"]

[dependencies]
kanske-lib = { path = "../kanske-lib" }
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-wlr.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
calloop.workspace = true
calloop-wayland-source.workspace = true

[[bin]]
name = "kanske"
path = "src/main.rs"
