[package]
name = "kanskectl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kanske-lib = { path = "../kanske-lib" }
clap.workspace = true
nix = { workspace = true, features = ["signal"] }

[[bin]]
name = "kanskectl"
path = "src/main.rs"
