[package]
name = "kanskectl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "CLI control tool for the kanske Wayland display configuration daemon"
publish = false
keywords = ["wayland", "display", "monitor", "hotplug", "compositor"]
categories = ["command-line-utilities"]

[dependencies]
kanske-lib = { path = "../kanske-lib" }
clap.workspace = true
nix = { workspace = true, features = ["signal"] }

[[bin]]
name = "kanskectl"
path = "src/main.rs"
